# postgen

./: .gitignore  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
src/: agents.py  clients.py  mongo_client.py  prompts.py  utils.py  workflow.py
src/services/: mongo_client.py  rapidapi.py
src/templates/: __init__.py  basic.py  thumbnail.py  timeline.py  writeup.py
src/templates/infomance/: content.py  thumbnail.py  thumbnail_3.py
src/templates/scoopwhoop/: meme.py  text_based.py  thumbnail.py  timeline.py  writeup.py
src/templates/social_village/: content.py  thumbnail.py
src/templates/the_sarcastic_indian/: text_based.py  writeup.py
src/templates/twitter/: tweet_image.py  tweet_tag.py  tweet_text.py
src/workflows/: content_creator.py  edit_image.py  edit_video.py  editor_utils.py  editors.py  generate_posts.py  image_gen.py  sources.py  tweet_creator.py
streamlit_pages/: editor.py  generate_page.py  history_page.py  page_editor.py  post_editor_page.py  sources_page.py  tweet_page.py
